# rsj_2017_application

./: .travis.yml  CMakeLists.txt  package.xml
config/: app_visualisation.rviz
launch/: start_app.launch  start_headless.launch
urdf/: work_cell.urdf.xacro
